# kallisti

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile.toml  README.md  Trunk.toml  package-lock.json  package.json  tailwind.config.js
crates/kallisti-command-error/: Cargo.toml
crates/kallisti-command-error/src/: lib.rs
crates/kallisti-error/: Cargo.toml
crates/kallisti-error/src/: lib.rs
crates/kallisti-models/: Cargo.toml
crates/kallisti-models/src/: lib.rs
frontend/: Cargo.toml  index.html
frontend/public/css/: main.css
frontend/src/: lib.rs  main.rs
frontend/src/components/: app.rs  login.rs  mod.rs  notification_button.rs
frontend/src/tauri_api/: tauri.rs
src/: kallisti.rs  lib.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_state.rs  lib.rs  main.rs
src-tauri/src/commands/: hello.rs  login.rs  mod.rs  notify.rs
